--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -120,17 +120,187 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12">
-					<div class="product-slider">
+					<div class="product-slider js-promo-slider">
 						<div class="product-slide">
 							<div class="col col--half">
-								<div class="product-slider__photo js-promo-slider">
-									<img src="img/product-1.png" alt="" data-slideId='1'>
-									<img src="img/product-2.png" alt="" data-slideId='2'>
-									<img src="img/product-3.png" alt="" data-slideId='3'>
-									<img src="img/product-4.png" alt="" data-slideId='4'>
-									<img src="img/product-5.png" alt="" data-slideId='5'>
-									<img src="img/product-6.png" alt="" data-slideId='6'>
-									<img src="img/product-7.png" alt="" data-slideId='7'>
+								<div class="product-slider__photo ">
+									<img src="img/file-bez-kozhi-v-masle_rotate.png" alt="" data-slideId='1'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/HolodnogoKopcheniya_rotate.png" alt="" data-slideId='2'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/KusochkiVMasleAppetitnaya_rotate.png" alt="" data-slideId='3'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/KusochkiVSolevoyZalivkeFirmennaya_rotate.png" alt="" data-slideId='4'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/PodkopchenayaVMasle_rotate.png" alt="" data-slideId='5'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/TushkaHolodnKopcheniya_rotate.png" alt="" data-slideId='6'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/TushkaSolenayaVSolevoyZalivke250_rotate.png" alt="" data-slideId='7'>
+								</div>
+							</div>
+
+							<div class="col col--half col--info">
+								<h3 class="product-slide__title">Филе иваси<br>с кожей в масле</h3>
+								<div class="option-list">
+									<span class="option">Сардина тихоокеанская холодного копчения. Тушка специальной разделки.</span>
+									<span class="option">Пресервы, 240 г</span>
+								</div>
+
+								<div class="btn btn--orange btn--promo-buy">Где купить</div>
+
+								<div class="product__rating">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-filled.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+									<img src="img/star-empty.svg" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="product-slide">
+							<div class="col col--half">
+								<div class="product-slider__photo ">
+									<img src="img/TushkaSolenayaVSolevoyZalivke500_rotate.png" alt="" data-slideId='8'>
 								</div>
 							</div>
 
@@ -165,31 +335,35 @@
 				<div class="col-xl-10 col-xl-offset-1">
 					<div class="js-promo-slider-nav">
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-1.png" alt="">
+							<img src="img/file-bez-kozhi-v-masle_thumb.png" alt="">
 						</div>
 
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-2.png" alt="">
+							<img src="img/holod-kopchenie_thumb.png" alt="">
 						</div>
 
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-3.png" alt="">
+							<img src="img/kusochki-v-masle_thumb.png" alt="">
 						</div>
 
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-4.png" alt="">
+							<img src="img/kusochki-v-sol-zalivke_thumb.png" alt="">
 						</div>
 
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-5.png" alt="">
+							<img src="img/podkopchen-v-masle_thumb.png" alt="">
 						</div>
 
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-6.png" alt="">
+							<img src="img/tushka-holod-kopchenie_thumb.png" alt="">
 						</div>
 
 						<div class="promo-nav-slide">
-							<img src="img/nav-product-thumb-7.png" alt="">
+							<img src="img/tushka-solen-v-zalivke_thumb.png" alt="">
+						</div>
+
+						<div class="promo-nav-slide">
+							<img src="img/tushka-solen-v-zalivke-bolshaya_thumb.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -220,7 +394,7 @@
 
 						<div class="details">
 							<div class="time">50 мин.</div>
-							<div class="portion">2</div>
+							<div class="portion">2 порции</div>
 						</div>
 
 						<div class="btn btn--orange btn--pecipe-more">Узнать подробнее</div>
