change recipes images

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -407,60 +407,30 @@
 					<div class="recipes-slider js-recipes-slider">
 						<div class="recipe animated animated-scroll slow" data-animateClass="fadeInUp">
 							<div class="recipe__photo">
-								<img src="img/kanape-ivasi-kivi.jpg" alt="Канапе с иваси и киви">
+								<img src="img/recipes/kanape-s-kivi/kanape-s-kivi-main.jpg" alt="Канапе с иваси и киви">
 							</div>
 
-							<a class="recipe__link" href="">
+							<a class="recipe__link" href="kanape-s-kivi.html">
 								<span class="recipe__caption">Канапе с иваси и киви</span>
 							</a>
 						</div>
 
 						<div class="recipe animated animated-scroll slow" data-animateClass="fadeInUp">
 							<div class="recipe__photo">
-								<img src="img/seld-po-datski.jpg" alt="Бутерброд с сельдью по-датски">
+								<img src="img/recipes/po-datski/po-datski-main.jpg" alt="Бутерброд с сельдью по-датски">
 							</div>
 
-							<a class="recipe__link" href="">
+							<a class="recipe__link" href="po-datski.html">
 								<span class="recipe__caption">Бутерброд с сельдью по-датски</span>
 							</a>
 						</div>
 
 						<div class="recipe animated animated-scroll slow" data-animateClass="fadeInUp">
 							<div class="recipe__photo">
-								<img src="img/rus-pyatnica.jpg" alt="Салат Русская пятница">
+								<img src="img/recipes/russian-friday/russkaya-pyatnitsa-main.jpg" alt="Салат Русская пятница">
 							</div>
 
-							<a class="recipe__link" href="">
-								<span class="recipe__caption">Салат Русская пятница</span>
-							</a>
-						</div>
-
-						<div class="recipe animated-scroll slow" data-animateClass="fadeInUp">
-							<div class="recipe__photo">
-								<img src="img/kanape-ivasi-kivi.jpg" alt="Канапе с иваси и киви">
-							</div>
-
-							<a class="recipe__link" href="">
-								<span class="recipe__caption">Канапе с иваси и киви</span>
-							</a>
-						</div>
-
-						<div class="recipe animated-scroll slow" data-animateClass="fadeInUp">
-							<div class="recipe__photo">
-								<img src="img/seld-po-datski.jpg" alt="Бутерброд с сельдью по-датски">
-							</div>
-
-							<a class="recipe__link" href="">
-								<span class="recipe__caption">Бутерброд с сельдью по-датски</span>
-							</a>
-						</div>
-
-						<div class="recipe animated-scroll slow" data-animateClass="fadeInUp">
-							<div class="recipe__photo">
-								<img src="img/rus-pyatnica.jpg" alt="Салат Русская пятница">
-							</div>
-
-							<a class="recipe__link" href="">
+							<a class="recipe__link" href="russian-friday.html">
 								<span class="recipe__caption">Салат Русская пятница</span>
 							</a>
 						</div>
