--- a/ivasi/russian-friday.html
+++ b/ivasi/russian-friday.html
@@ -219,7 +219,7 @@
 					<div class="recipes-catalog">
 						<div class="recipe">
 							<div class="recipe__photo">
-								<img src="img/kanape-ivasi-kivi.jpg" alt="Канапе с иваси и киви">
+								<img src="img/recipes/kanape-s-kivi/kanape-s-kivi-main.jpg" alt="Канапе с иваси и киви">
 							</div>
 
 							<a class="recipe__link" href="kanape-s-kivi.html" tabindex="0">
@@ -230,7 +230,7 @@
 
 						<div class="recipe">
 							<div class="recipe__photo">
-								<img src="img/seld-po-datski.jpg" alt="Бутерброд с сельдью по-датски">
+								<img src="img/recipes/po-datski/po-datski-main.jpg" alt="Бутерброд с сельдью по-датски">
 							</div>
 
 							<a class="recipe__link" href="po-datski.html" tabindex="0">
@@ -241,7 +241,7 @@
 
 						<div class="recipe">
 							<div class="recipe__photo">
-								<img src="img/rus-pyatnica.jpg" alt="Салат Русская пятница">
+								<img src="img/recipes/russian-friday/russkaya-pyatnitsa-main.jpg" alt="Салат Русская пятница">
 							</div>
 
 							<a class="recipe__link" href="russian-friday.html" tabindex="0">
