some fixes from orderer

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -384,7 +384,7 @@
 
 				<div class="col-xl-6 recipe-main-photo">
 					<div class="recipe recipe--main animated animated-scroll slow" data-animateClass="fadeInLeft">
-						<img src="img/seld-pod-shuboi.jpg" alt="Салат Сельдь под шубой">
+						<img src="img/recipes/pod-shuboi/pod-shuboy-main.jpg" alt="Салат Сельдь под шубой">
 					</div>
 				</div>
 
@@ -397,7 +397,7 @@
 							<div class="portion">2 порции</div>
 						</div>
 
-						<div class="btn btn--orange btn--pecipe-more">Узнать подробнее</div>
+						<a href="seld-pod-shuboi.html" class="btn btn--orange btn--pecipe-more">Узнать подробнее</a>
 					</div>
 				</div>
 			</div>
