--- a/ivasi/kanape-s-kivi.html
+++ b/ivasi/kanape-s-kivi.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="js/slick/slick-theme.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body class="product">
+<body class="product" id="product">
 	<header>
 		<div class="header__menu">
 			<div class="logo">
@@ -18,7 +18,8 @@
 				<div class="logo__shadow"></div>
 			</div>
 			<ul class="main-menu">
-				<li class="main-menu__item"><a class="main-menu__link link--active" href="/#promo" data-target="promo">Продукция</a></li>
+				<li class="main-menu__item"><a class="main-menu__link" href="/" data-target="home">Главная</a></li>
+				<li class="main-menu__item"><a class="main-menu__link" href="/#promo" data-target="promo">Продукция</a></li>
 				<li class="main-menu__item"><a class="main-menu__link" href="/#recipes" data-target="recipes">Рецепты</a></li>
 				<li class="main-menu__item"><a class="main-menu__link" href="/#comments" data-target="comments">Отзывы</a></li>
 				<li class="main-menu__item"><a class="main-menu__link" href="/#faq" data-target="faq">FAQ</a></li>
@@ -345,7 +346,7 @@
 									<div class="slider-controls js-all-products-slider-controls"></div>
 								</div>
 								<div class="col-xl-4 center">
-									<a class="btn btn--orange btn--promo-buy">Где купить</a>
+									<a class="btn btn--orange btn--promo-buy" href="/#shops">Где купить</a>
 								</div>
 							</div>
 						</div>
