complete customers corrections

--- a/ivasi/seld-pod-shuboi.html
+++ b/ivasi/seld-pod-shuboi.html
@@ -17,16 +17,22 @@
 				<div class="logo__photo"></div>
 				<div class="logo__shadow"></div>
 			</div>
-			<ul class="main-menu">
-				<li class="main-menu__item"><a class="main-menu__link" href="/" data-target="home">Главная</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#promo" data-target="promo">Продукция</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#recipes" data-target="recipes">Рецепты</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#comments" data-target="comments">Отзывы</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#faq" data-target="faq">FAQ</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#certificates" data-target="certificates">Сертификаты</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#shops" data-target="shops">Где купить</a></li>
-				<li class="main-menu__item"><a class="main-menu__link" href="/#footer" data-target="footer">Контакты</a></li>
-			</ul>
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-12">
+						<ul class="main-menu">
+							<li class="main-menu__item"><a class="main-menu__link link--active" href="/" data-target="home">Главная страница</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#promo" data-target="promo">Продукция</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#recipes" data-target="recipes">Рецепты</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#comments" data-target="comments">Отзывы</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#faq" data-target="faq">FAQ</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#certificates" data-target="certificates">Сертификаты</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#shops" data-target="shops">Где купить</a></li>
+							<li class="main-menu__item"><a class="main-menu__link" href="/#footer" data-target="footer">Контакты</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="slider-wrap">
@@ -36,7 +42,7 @@
 				</div>
 			</div>
 
-			<div class="slide__title">
+			<div class="slide__title slide__title--recipe">
 				<div class="slide__header">Рецепты из иваси</div>
 			</div>
 		</div>
@@ -311,81 +317,81 @@
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/file-bez-kozhi-v-masle.png" alt="">
+									<img src="img/products/rec-bez-kozhi-v-masle.png" alt="Филе Иваси без кожи в масле">
 								</div>
 							</div>
-							<div class="product__title">Филе иваси<br>без кожи в масле</div>
-							<div class="description">пресервы<br>240 г</div>
+							<div class="product__title">Филе Иваси<br>без кожи в масле</div>
+							<div class="description">240 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/holod-kopchenie.png" alt="">
+									<img src="img/products/rec-s-kozhej-v-masle.png" alt="Филе Иваси с кожей в масле">
 								</div>
 							</div>
-							<div class="product__title">Иваси<br>холодного копчения</div>
-							<div class="description">пресервы<br>240 г</div>
+							<div class="product__title">Филе Иваси<br>с кожей в масле</div>
+							<div class="description">240 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/kusochki-v-masle.png" alt="">
+									<img src="img/products/rec-podkopchen-v-masle.png" alt="Филе Иваси подкопченное в масле">
 								</div>
 							</div>
-							<div class="product__title">Иваси кусочки<br>в масле</div>
-							<div class="description">пресервы<br>240 г</div>
+							<div class="product__title">Филе Иваси<br>подкопченное в масле</div>
+							<div class="description">240 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/kusochki-v-sol-zalivke.png" alt="">
+									<img src="img/products/rec-bk-holod-kopcheniya.png" alt="Филе Иваси с кожей холодного копчения">
 								</div>
 							</div>
-							<div class="product__title">Иваси кусочки <br>в соленой заливке</div>
-							<div class="description">пресервы<br>240 г</div>
+							<div class="product__title">Филе Иваси с кожей<br>холодного копчения</div>
+							<div class="description">240 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/podkopchen-v-masle.png" alt="">
+									<img src="img/products/rec-kusochki-v-masle.png" alt='Кусочки Иваси в масле «Аппетитная»'>
 								</div>
 							</div>
-							<div class="product__title">Иваси<br>подкопченая в масле</div>
-							<div class="description">пресервы<br>240 г</div>
+							<div class="product__title">Кусочки Иваси<br>в масле «Аппетитная»</div>
+							<div class="description">240 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/tushka-holod-kopchenie.png" alt="">
+									<img src="img/products/rec-kusochki-v-sol-zalivke.png" alt='Кусочки Иваси в солевой заливке «Фирменная»'>
 								</div>
 							</div>
-							<div class="product__title">Иваси<br>холодного копчения</div>
-							<div class="description">пресервы<br>240 г</div>
+							<div class="product__title">Кусочки Иваси<br>в солевой заливке «Фирменная»</div>
+							<div class="description">240 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/tushka-solen-v-zalivke.png" alt="">
+									<img src="img/products/rec-tushka-solen-v-zalivke-bolshaya.png" alt="Тушка соленая Иваси в солевой заливке 250 г">
 								</div>
 							</div>
-							<div class="product__title">Иваси тушка<br>в соленой заливке</div>
-							<div class="description">пресервы<br>250 г</div>
+							<div class="product__title">Тушка соленая Иваси<br>в солевой заливке</div>
+							<div class="description">250 г</div>
 						</div>
 
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
-									<img src="img/tushka-solen-v-zalivke-bolshaya.png" alt="">
+									<img src="img/products/rec-tushka-solen-v-zalivke-bolshaya.png" alt="">
 								</div>
 							</div>
-							<div class="product__title">Иваси тушка<br>в соленой заливке</div>
-							<div class="description">пресервы<br>530 г</div>
+							<div class="product__title">Тушка соленая Иваси<br>в солевой заливке</div>
+							<div class="description">530 г</div>
 						</div>
 					</div>
 
@@ -428,7 +434,9 @@
 				</div>
 			</div>
 		</div>
-
+		<div class="to-top-wrap">
+			<img class="to-top js-to-top animated infinite pulse" src="img/naverh-white.svg" alt="Наверх">
+		</div>
 		<div class="copyrights">© antey.group 2019</div>
 
 		<span class="bg-elem bg-footer-ship animated animated-scroll delay-0-5s slower" data-animateClass="fadeInRight"></span>
