fix bad products name

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -136,7 +136,7 @@
 							</div>
 
 							<div class="col col--half col--info">
-								<h3 class="product-slide__title">Филе Иваси<br>с кожей в масле</h3>
+								<h3 class="product-slide__title">Филе Иваси<br>без кожи в масле</h3>
 								<div class="option-list">
 									<span class="option">240 г</span>
 								</div>
