--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -166,7 +166,7 @@
 									<span class="option">240 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -191,7 +191,7 @@
 									<span class="option">240 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -216,7 +216,7 @@
 									<span class="option">150 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -231,7 +231,7 @@
 						<div class="product-slide">
 							<div class="col col--half">
 								<div class="product-slider__photo ">
-									<img src="img/products/promo-kusochki-v-masle-appetitnaya.png" alt='Кусочки Иваси в масле "Аппетитная"'>
+									<img src="img/products/promo-kusochki-v-masle-appetitnaya.png" alt='Кусочки Иваси в масле «Аппетитная»'>
 								</div>
 							</div>
 
@@ -241,7 +241,7 @@
 									<span class="option">210 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -256,7 +256,7 @@
 						<div class="product-slide">
 							<div class="col col--half">
 								<div class="product-slider__photo ">
-									<img src="img/products/promo-kusochki-v-solevoy-zalivke-firmennaya.png" alt='Кусочки Иваси<br>в солевой заливке "Фирменная"'>
+									<img src="img/products/promo-kusochki-v-solevoy-zalivke-firmennaya.png" alt='Кусочки Иваси<br>в солевой заливке «Фирменная»'>
 								</div>
 							</div>
 
@@ -266,7 +266,7 @@
 									<span class="option">210 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -291,7 +291,7 @@
 									<span class="option">250 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -316,7 +316,7 @@
 									<span class="option">530 г</span>
 								</div>
 
-								<div class="btn btn--orange btn--promo-buy go-to-shops">Где купить</div>
+								<a href="/#" data-target="shops"class="btn btn--orange btn--promo-buy go-to-shops">Где купить</a>
 
 								<div class="product__rating">
 									<img src="img/star-filled.svg" alt="">
@@ -470,7 +470,6 @@
 						<div class="comment">
 							<div class="comment__text-wrap">
 								<div class="comment__text scrollbar-outer">Яркий насыщенный вкус. Есть кожура с одной стороны. Легко очищается от кожуры. Есть мелкие косточки, иногда даже не мелкие, но меня это не смущает. Вкусная сардина, буду брать ещё.</div>
-								<!-- <a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a> -->
 							</div>
 
 							<div class="comment__author">
@@ -488,7 +487,6 @@
 						<div class="comment">
 							<div class="comment__text-wrap">
 								<div class="comment__text scrollbar-outer">Купила сегодня «иваси» филе холодного копчения, так как рыбу люблю и разбираюсь… угодить мне не так просто. Была приятно удивлена, насколько хороша рыбка. В меру соли, не сухая, легкий аромат копчения! Супер! Качество на пять с плюсом!</div>
-								<!-- <a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a> -->
 							</div>
 
 							<div class="comment__author">
@@ -506,7 +504,6 @@
 						<div class="comment">
 							<div class="comment__text-wrap">
 								<div class="comment__text scrollbar-outer">Изумительно!!! Очень вкусная, малосолёная и не очень жирная рыбка! С копчёностью тоже всё в норме, в меру. Очень понравилась всей семье. Купила сначала две упаковки, оказалось мало. Ходила ещё покупать.</div>
-								<!-- <a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a> -->
 							</div>
 
 							<div class="comment__author">
@@ -524,7 +521,6 @@
 						<div class="comment">
 							<div class="comment__text-wrap">
 								<div class="comment__text scrollbar-outer">Очень вкусная рыбка с подкопченным вкусом и приятным и естественным запахом дымка. В меру маслянистая, плотной структуры, с сохранённой кожицей. Не содержит костей. Вкус приятный, соленый и невероятно нежный. С чёрным хлебушком зашло на ура! Отличная закуска, буду покупать ещё…</div>
-								<!-- <a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a> -->
 							</div>
 
 							<div class="comment__author">
@@ -542,7 +538,6 @@
 						<div class="comment">
 							<div class="comment__text-wrap">
 								<div class="comment__text">Рыба вкусная, в меру соленая, жирная.</div>
-								<!-- <a href="https://otzovik.com/review_8797580.html" class="comment__more">Читать целиком</a> -->
 							</div>
 
 							<div class="comment__author">
@@ -599,14 +594,16 @@
 					<div class="faq__row animated animated-scroll fast" data-animateClass="fadeInUp">
 						<div class="faq__buble faq__buble--answer">
 							<div class="fishing">
-								<img class="fishing-map" src="img/fishing-places.svg" alt="Карта промысла">
+								<img class="fishing-map" src="img/faq/fishing-places.svg" alt="Карта промысла">
 
-								<img class="fishing-point fishing-point-1 animated animated-scroll slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
-								<img class="fishing-point fishing-point-2 animated animated-scroll delay-0-5s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
-								<img class="fishing-point fishing-point-3 animated animated-scroll delay-1s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
-								<img class="fishing-point fishing-point-4 animated animated-scroll delay-1-5s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
-								<img class="fishing-point fishing-point-5 animated animated-scroll delay-2s slow" src="img/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-1 animated animated-scroll slow" src="img/faq/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-2 animated animated-scroll delay-0-5s slow" src="img/faq/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-3 animated animated-scroll delay-1s slow" src="img/faq/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-4 animated animated-scroll delay-1-5s slow" src="img/faq/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
+								<img class="fishing-point fishing-point-5 animated animated-scroll delay-2s slow" src="img/faq/fishing-point.svg" data-animateClass="fadeInUp" alt="Точка на карте">
 							</div>
+
+							<p>Сардина ИВАСИ обитает в морях Дальнего Востока, преимущественно в Японском море, нередко заходит в более северные широты вплоть до берегов Камчаткии Курильских островов. Также встречается у берегов Японии, Кореи и Китая, вплоть до северной части Южно-Китайского моря.</p>
 						</div>
 
 						<a class="faq__avatar faq__avatar--antei" href="https://antey.group/">
@@ -628,9 +625,9 @@
 							<div class="faq__buble faq__buble--answer">
 								<div id="fishing-process">
 									<ul>
-										<li class="show"><img class="fishing-process-img" src="img/fishing-ivasi-1.svg" alt=""></li>
-										<li><img class="fishing-process-img" src="img/fishing-ivasi-2.svg" alt=""></li>
-										<li><img class="fishing-process-img" src="img/fishing-ivasi-3.svg" alt=""></li>
+										<li class="show"><img class="fishing-process-img" src="img/faq/fishing-ivasi-1.svg" alt=""></li>
+										<li><img class="fishing-process-img" src="img/faq/fishing-ivasi-2.svg" alt=""></li>
+										<li><img class="fishing-process-img" src="img/faq/fishing-ivasi-3.svg" alt=""></li>
 									</ul>
 								</div>
 
@@ -655,7 +652,7 @@
 
 						<div class="faq__row">
 							<div class="faq__buble faq__buble--answer">
-								<img class="answer-img" src="img/vitaminy.svg" alt="">
+								<img class="answer-img" src="img/faq/vitaminy.svg" alt="">
 
 								<p>В Иваси содержится максимум полезных веществ – она богата витаминами группы В, сардина Иваси лидирует по количеству ОМЕГА-3 в составе - в ней содержится в 6 раз больше ОМЕГА-3 по сравнению с лососем. Она также содержит йод, фосфор, кальций, магний, калий.</p>
 
@@ -678,7 +675,7 @@
 
 						<div class="faq__row">
 							<div class="faq__buble faq__buble--answer">
-								<img class="answer-img" src="img/how-to-save.svg" alt="">
+								<img class="answer-img" src="img/faq/how-to-save.svg" alt="">
 
 								<p>Пресервы не подвергаются обработке высокими температурами в отличие от консервов. Срок хранения пресервов меньше, чем консервов, зато у рыбных пресервов более насыщенный вкус, в них сохранен максимум полезных веществ, к тому же поверхность рыбы не страдает.</p>
 							</div>
@@ -699,7 +696,7 @@
 
 						<div class="faq__row animated animated-scroll fast" data-animateClass="fadeInUp">
 							<div class="faq__buble faq__buble--answer">
-								<img class="answer-img" src="img/otvet-kosti.png" alt="">
+								<img class="answer-img" src="img/faq/otvet-kosti.png" alt="">
 
 								<p>Существует два пути удаления костей: химический и механический. Чтобы избежать использования химических веществ, мы удаляем их механически. Если и остаются какие-то небольшие косточки, то их можно съесть без дискомфорта, поскольку они гораздо мягче по сравнению с сельдью. Добавлять Иваси в рацион можно любому – здесь нет каких-либо возрастных ограничений.</p>
 							</div>
@@ -720,7 +717,7 @@
 
 						<div class="faq__row animated animated-scroll fast" data-animateClass="fadeInUp">
 							<div class="faq__buble faq__buble--answer">
-								<img class="answer-img" src="img/otvet-recept.png" alt="">
+								<img class="answer-img" src="img/faq/otvet-recept.png" alt="">
 
 								<p>Рецептов с ИВАСИ множество: от традиционных советских блюд до современных рецептов со всего света. Следите за обновлениями в разделе <a class="go-to-recipes" href="/#recipes" data-target="recipes">«Рецепты»</a></p>
 							</div>
