--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -164,7 +164,7 @@
 						<span class="bullet__info">Протоколы<br>исследования<br>РАН</span>
 					</div>
 
-					<div class="bullet bullet----mechanic">
+					<div class="bullet bullet--mechanic">
 						<img class="bullet__img" src="img/bullet-mechanic.svg" alt="Узнать подробности">
 						<span class="bullet__info">Узнать<br> подробности</span>
 					</div>
