added new product in home and pod-shuboi pages

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -269,6 +269,34 @@
 					<div class="slide-inner">
 						<div class="col col--half">
 							<div class="product-slider__photo ">
+								<img src="img/products/promo-tushka-holodnogo-kopcheniya.png"
+								alt="Тушка Иваси холодного копчения">
+							</div>
+						</div>
+
+						<div class="col col--half col--info">
+							<h3 class="product-slide__title">Тушка Иваси<br>холодного копчения</h3>
+
+							<div class="option-list">200 г</div>
+
+							<div class="product__rating">
+								<img src="img/star-filled.svg" alt="">
+								<img src="img/star-filled.svg" alt="">
+								<img src="img/star-filled.svg" alt="">
+								<img src="img/star-filled.svg" alt="">
+								<img src="img/star-filled.svg" alt="">
+							</div>
+
+							<a href="/#" data-target="shops" class="btn btn--orange btn--promo-buy go-to-shops">Где
+							купить</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="product-slide">
+					<div class="slide-inner">
+						<div class="col col--half">
+							<div class="product-slider__photo ">
 								<img src="img/products/promo-ivasi-holod-kopcheniya.png"
 								alt="Филе Иваси с кожей холодного копчения">
 							</div>
@@ -428,6 +456,13 @@
 						<div>
 							<div class="promo-nav-slide">
 								<img src="img/products/thmb-podkopchen-v-masle.png" alt="Филе Иваси подкопченное в масле">
+							</div>
+						</div>
+
+						<div>
+							<div class="promo-nav-slide">
+								<img src="img/products/thmb-tushka-holodnogo-kopcheniya.png"
+								alt="Тушка Иваси холодного копчения">
 							</div>
 						</div>
 
