--- a/ivasi/seld-pod-shuboi.html
+++ b/ivasi/seld-pod-shuboi.html
@@ -388,11 +388,21 @@
 						<div class="product-slide">
 							<div class="product__item">
 								<div class="product__photo">
+									<img src="img/products/rec-tushka-holodnogo-kopcheniya.png" alt="Тушка Иваси холодного копчения">
+								</div>
+							</div>
+							<div class="product__title">Тушка Иваси<br>холодного копчения</div>
+							<div class="description">200 г</div>
+						</div>
+
+						<div class="product-slide">
+							<div class="product__item">
+								<div class="product__photo">
 									<img src="img/products/rec-bk-holod-kopcheniya.png" alt="Филе Иваси с кожей холодного копчения">
 								</div>
 							</div>
 							<div class="product__title">Филе Иваси с кожей<br>холодного копчения</div>
-							<div class="description">240 г</div>
+							<div class="description">150 г</div>
 						</div>
 
 						<div class="product-slide">
