Мобильная версия, faq, сертификаты, контакты

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -79,7 +79,9 @@
 
 			<div class="container">
 				<div class="main-menu-wrap">
-					<div class="burger">MENU</div>
+					<div class="burger_wrapper">
+						<div class="burger"></div>
+					</div>
 
 					<ul class="main-menu">
 						<a class="main-menu__link link--active" href="/" data-target="home">Главная</a>
@@ -515,24 +517,55 @@
 		<div class="recipes-top">
 			<h2 class="section-title">Рецепты из иваси</h2>
 
-			<div class="col col--half recipe-main-photo">
-				<div class="recipe recipe--main animated animated-scroll slow" data-animateClass="fadeInLeft">
-					<img src="img/recipes/pod-shuboi/pod-shuboy-main.jpg" alt="Салат Сельдь под шубой">
-				</div>
-			</div>
+			<div class="recipies_static">
 
-			<div class="col col--half">
-				<div class="recipe recipe__info">
-					<h4 class="recipe-name">Салат «Сельдь под шубой»</h4>
+				<div class="recipies_static_item">
 
-					<div class="details">
-						<div class="time">50 мин.</div>
-						<div class="portion">2 порции</div>
+					<div class="col col--half recipe-main-photo">
+						<div class="recipe recipe--main animated animated-scroll slow" data-animateClass="fadeInLeft">
+							<img src="img/recipes/pod-shuboi/pod-shuboy-main.jpg" alt="Салат Сельдь под шубой">
+						</div>
 					</div>
 
-					<a href="seld-pod-shuboi.html" class="btn btn--orange btn--pecipe-more">Узнать подробнее</a>
+					<div class="col col--half">
+						<div class="recipe recipe__info">
+							<h4 class="recipe-name">Салат «Сельдь под шубой»</h4>
+
+							<div class="details">
+								<div class="time">50 мин.</div>
+								<div class="portion">2 порции</div>
+							</div>
+
+							<a href="seld-pod-shuboi.html" class="btn btn--orange btn--pecipe-more">Узнать подробнее</a>
+						</div>
+					</div>
 				</div>
+
+				<div class="recipies_static_item">
+
+					<div class="col col--half recipe-main-photo">
+						<div class="recipe recipe--main animated animated-scroll slow" data-animateClass="fadeInLeft">
+							<img src="img/recipes/pod-shuboi/pod-shuboy-main.jpg" alt="Салат Сельдь под шубой">
+						</div>
+					</div>
+
+					<div class="col col--half">
+						<div class="recipe recipe__info">
+							<h4 class="recipe-name">Салат «Сельдь под шубой»</h4>
+
+							<div class="details">
+								<div class="time">50 мин.</div>
+								<div class="portion">2 порции</div>
+							</div>
+
+							<a href="seld-pod-shuboi.html" class="btn btn--orange btn--pecipe-more">Узнать подробнее</a>
+						</div>
+					</div>
+				</div>
+				<a href="seld-pod-shuboi.html" class="btn btn--orange btn--all-pecipe-more">Все рецепты</a>
 			</div>
+
+			
 		</div>
 
 		<div class="recipes-slider-wrap">
