photo optimization (25%), fonts files

--- a/ivasi/index.html
+++ b/ivasi/index.html
@@ -140,7 +140,7 @@
                 <div class="home-slider__slide">
                     <img class="slide__image slide__image--desktop" src="img/head-sliders/slider-avocado-desck.jpg"
                          alt="Бутерброд с авокадо">
-                    <img class="slide__image slide__image--mobile" src="img/head-sliders/avocado-slider.jpg"
+                    <img class="slide__image slide__image--mobile" src="img/head-sliders/avocado-slider.png"
                          alt="Бутерброд с авокадо">
                 </div>
             </div>
