fix https warning in iframe

--- a/icebreakers/index.html
+++ b/icebreakers/index.html
@@ -13,7 +13,7 @@
     <div class="game">
         <img src="img/logo.png" alt="Ледоколы лого" class="logo">
         <div class="loader">Загрузка<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span></div>
-        <iframe src="http://xn--80aiclmddjob7hxb.xn--p1ai/" frameborder="0"></iframe>
+        <iframe src="https://xn--80aiclmddjob7hxb.xn--p1ai/" frameborder="0"></iframe>
     </div>
 </body>
 </html>
