--- a/icebreakers/index.html
+++ b/icebreakers/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ледоколы</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <img src="img/back.png" alt="Горы" class="mountains">
