--- a/icebreakers/index.html
+++ b/icebreakers/index.html
@@ -1,20 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ледоколы</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>IceBreakers</title>
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="shortcut icon" href="favicon.png" type="image/png">
+
+
 </head>
+
 <body>
+    <img src="img/logo.png" alt="Ледоколы" class="logo logo--mobile">
+    <img src="img/oops.png" alt="Не работает на мобильном" class="no-mobile">
+    <div class="no-mobile-text">
+        <p>Ваш браузер не поддерживает технологию Unity, загрузите игру из мобильных сторов или воспользуйтесь другим браузером.</p>
+    </div>
     <img src="img/back.png" alt="Горы" class="mountains">
     <img src="img/ground.png" alt="Льдина" class="footer">
+    <div class="footer-additional"></div>
     <img src="img/ships.png" alt="Корабли" class="ships">
-    <div class="game">
-        <img src="img/logo.png" alt="Ледоколы лого" class="logo">
-        <div class="loader">Загрузка<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span></div>
-        <iframe src="https://xn--80aiclmddjob7hxb.xn--p1ai/" frameborder="0"></iframe>
+
+    <div class="game-wrapper" id="game-wrapper">
+        <div class="game" id="game">
+            <div class="preloader" id="preloader">
+                <iframe id="ytplayer" width="100%" src="https://www.youtube.com/embed/ZpfSftBTBWI?autoplay=1&mute=1&end=31" frameborder="0" controls="0" allow="accelerometer; autoplay; loop; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls" allowfullscreen></iframe>
+
+                <img src="img/logo.png" alt="Ледоколы лого" class="logo">
+
+                <div class="loader">Загрузка<span class="dot">.</span><span class="dot">.</span><span class="dot">.</span></div>
+            </div>
+
+            <div class="game-container" id="gameContainer"></div>
+        </div>
     </div>
+
+    <a href="https://apps.apple.com/ru/app/%D0%BB%D0%B5%D0%B4%D0%BE%D0%BA%D0%BE%D0%BB%D1%8B/id1527573580" class="link link--appstore"><img src="img/appstore.png"></a>
+    <a href="https://play.google.com/store/apps/details?id=com.tvx.icebreaker" class="link link--googleplay"><img src="img/google-play.png"></a>
+    <a href="" class="link link--review" id="new-review"><img src="img/review.png"></a>
+    <a href="https://vk.com" class="link link--vk"><img src="img/vk.png"></a>
+
+    <div class="fullscreen">
+        <span>развернуть<br>на весь экран</span>
+        <img src="img/fullscreen.png">
+    </div>
+
+    <div class="popup-review" id="popup-review">
+        <form id="form-review" class="form-review">
+            <p class="form-title">Оставить отзыв</p>
+
+            <iframe src="review-form.html" frameborder="0" id="review-frame" class="review-frame" sandbox="allow-same-origin"></iframe>
+
+            <div class="controls">
+                <button id="review-cancel" class="cancel">Отмена</button>
+                <button id="review-send" class="send">Отправить</button>
+            </div>
+        </form>
+
+        <div class="screen-ok" id="screen-ok">
+            <p class="form-title">Отзыв принят<br>Спасибо!</p>
+
+            <div class="controls">
+                <button id="review-ok" class="send">Ok</button>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        var a = document.createElement("link");
+        a.rel = "stylesheet";
+
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+            a.href = "css/mobile.css";
+        } else {
+            a.href = "css/style.css";
+        }
+        document.getElementsByTagName("head")[0].appendChild(a);
+    </script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        let iframe = jQuery('#review-frame')
+
+        // клик по кнопке ОСТАВИТЬ ОТЗЫВ
+        jQuery(document).on('click', '#new-review', function(e) {
+            e.preventDefault()
+            jQuery('#popup-review').stop().fadeIn(300)
+        })
+
+        // клик по кнопке ОК после отправки
+        jQuery(document).on('click', '#review-ok', function(e) {
+            e.preventDefault()
+            jQuery('#popup-review').stop().fadeOut(300, function() {
+                let form = iframe.contents().find('.input-wrapper')
+                form.find('#field-name').val('')
+                form.find('#field-email').val('')
+                form.find('#field-review').val('')
+                jQuery('#screen-ok').hide();
+            })
+        })
+
+        // клик по кнопке ОТМЕНА
+        jQuery(document).on('click', '#review-cancel', function(e) {
+            e.preventDefault()
+            jQuery('#popup-review').stop().fadeOut(300)
+        })
+
+        // отправка данных с формы
+        jQuery('#review-send').click(function(e) {
+            e.preventDefault()
+            let form = iframe.contents().find('.input-wrapper')
+
+            data = {
+                name: form.find('#field-name').val(),
+                email: form.find('#field-email').val(),
+                review: form.find('#field-review').val()
+            }
+            console.log(data)
+
+            jQuery.ajax({
+                url: "php/send.php",
+                method: 'POST',
+                data: data,
+                context: form
+            }).done(function() {
+                jQuery('#screen-ok').css({
+                    'display': 'flex'
+                })
+            })
+        });
+    </script>
+    <script src="Build/UnityLoader.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m, e, t, r, i, k, a) {
+            m[i] = m[i] || function() {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(67555015, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/67555015" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyBKy-33Z7jg8UfivsoqdJ3vhBtCdW4sJfo",
+            authDomain: "icebreaker-d9c3f.firebaseapp.com",
+            databaseURL: "https://icebreaker-d9c3f.firebaseio.com",
+            projectId: "icebreaker-d9c3f",
+            storageBucket: "icebreaker-d9c3f.appspot.com",
+            messagingSenderId: "1018947203423",
+            appId: "1:1018947203423:web:acfc245836622175dc46ea",
+            measurementId: "G-3P5EQZHY7S"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
+
+    <script>
+        var gameInstance = UnityLoader.instantiate("gameContainer", "Build/IceBreakersLanding.json", {
+            onProgress: UnityProgress
+        });
+
+        function UnityProgress(gameInstance, progress) {
+            <!-- if (!gameInstance.Module) { -->
+            <!-- return; -->
+            <!-- } -->
+            <!-- const loader = document.querySelector("#loader"); -->
+            <!-- if (progress === 1 && !gameInstance.removeTimeout) { -->
+            <!-- gameInstance.removeTimeout = setTimeout(function() { -->
+            <!-- loader.style.display = "none"; -->
+            <!-- }, 2000); -->
+            <!-- } -->
+        }
+    </script>
+    <script src="js/fullscreen.js"></script>
 </body>
+
 </html>
