--- a/icebreakers/index.html
+++ b/icebreakers/index.html
@@ -38,8 +38,8 @@
 
     <a href="https://apps.apple.com/ru/app/%D0%BB%D0%B5%D0%B4%D0%BE%D0%BA%D0%BE%D0%BB%D1%8B/id1527573580" class="link link--appstore"><img src="img/appstore.png"></a>
     <a href="https://play.google.com/store/apps/details?id=com.tvx.icebreaker" class="link link--googleplay"><img src="img/google-play.png"></a>
-    <a href="" class="link link--review" id="new-review"><img src="img/review.png"></a>
-    <a href="https://vk.com" class="link link--vk"><img src="img/vk.png"></a>
+    <a href="#" class="link link--review" id="new-review"><img src="img/review.png"></a>
+    <a href="https://vk.com/app7590907_32001373" class="link link--vk"><img src="img/vk.png"></a>
 
     <div class="fullscreen">
         <span>развернуть<br>на весь экран</span>
